--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,5 +18,14 @@
   },
   "dependencies": {
     "regenerator-runtime": "^0.11.1"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/a130888599/WordCount.git"
+  },
+  "bugs": {
+    "url": "https://github.com/a130888599/WordCount/issues"
+  },
+  "homepage": "https://github.com/a130888599/WordCount#readme"
 }
